--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "tales-from-a-dev/twig-tailwind-extra": "^1.0.0",
         "twig/extra-bundle": "^3.22",
         "twig/html-extra": "^3.12.0",
+        "twig/string-extra": "^3.22",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^2.9"
     },
