--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 ###< phpunit/phpunit ###
 
 ###> symfony/asset-mapper ###
-/public/assets/
+/public
 /assets/vendor/
 ###< symfony/asset-mapper ###
 
